1.sửa lần 1 thêm about

--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
   </head>
   <body>
     <h1>Khét lẹt</h1>
+    <h2>Sửa lần 1</h2>
+    <h2>Sửa lần 1</h2>
+    <h2>Sửa lần 1</h2>
+    <h2>Sửa lần 1</h2>
+    <h2>Sửa lần 1</h2>
+    <h2>Sửa lần 1</h2>
+    <h2>Sửa lần 1</h2>
   </body>
 </html>
